[tool.poetry]
name = "example-with-recursive"
version = "0.1.0"
description = ""
authors = ["Yasunori Horikoshi <hotoku@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
